--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="websites.MarsairTest" hash-for-method="interview">interview</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="websites.AutoSuggestiveTest" hash-for-method="autoSugg">autoSugg</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">websites.MarsairTest</span>
+              <span class="class-name">websites.AutoSuggestiveTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="interview">
-                  </a> <!-- interview -->
-                  <span class="method-name">interview</span>
+                  <a name="autoSugg">
+                  </a> <!-- autoSugg -->
+                  <span class="method-name">autoSugg</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/nc/5w0spb3d55bd_46g7v37jm4m0000gn/T/testng-eclipse-256940010/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/nc/5w0spb3d55bd_46g7v37jm4m0000gn/T/testng-eclipse-1399027465/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;websites.MarsairTest&quot;/&gt;
+      &lt;class name=&quot;websites.AutoSuggestiveTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'interview')
-data.setCell(0, 2, 'websites.MarsairTest')
-data.setCell(0, 3, 130869);
+data.setCell(0, 1, 'autoSugg')
+data.setCell(0, 2, 'websites.AutoSuggestiveTest')
+data.setCell(0, 3, 81734);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">websites.MarsairTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">websites.AutoSuggestiveTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">interview</span>
+                <span class="method-name">autoSugg</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
